[project]
name = "urt30t"
version = "1.0.0"
description = "|30+| UrT Game Bot"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "SQLAlchemy[asyncio]>=2.0.48",
    "tzdata>=2025.3; sys_platform == 'win32'",
    "urt30arcon>=2.0.2",
    "uvloop>=0.22.1; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.26",
    "types-aiofiles>=25.1.0",
    "watchfiles>=1.1.1",
]

[tool.ruff]
target-version = "py314"
extend-exclude = [".*", "alembic", "temp"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # shadowing builtins
    "ARG",  # unused arguments
    "ASYNC",  # async checks
    "B",  # bugbear
    "C4",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
    "FBT",  # boolean trap
    "FURB",  # refurb
    "I",   # isort
    "ISC",  # Implicit String Concat
    "LOG",  # logging checks
    "N",  # pep8-naming
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # Pytest
    "PTH",  # favor pahtlib.Path
    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
    "T20",  # print statements
    "TC",  # type checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]
ignore = ["ISC001", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "PLR2004",  # magic value used in comparison
    "S101",  # use of assert
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator"]

[tool.ty.src]
exclude = ["tests/test_log_parsing.py"]
