[project]
name = "urt30t"
version = "1.0.0"
description = "|30+| UrT Game Bot"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.4",
    "SQLAlchemy[asyncio]>=2.0.50",
    "tzdata>=2026.2; sys_platform == 'win32'",
    "urt30arcon>=2.1.3",
    "uvloop>=0.22.1; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "prek>=0.4.3",
    "pytest>=9.0.3",
    "ty>=0.0.40",
    "watchfiles>=1.2.0",
]

[tool.ruff]
target-version = "py314"
extend-exclude = [".*", "alembic", "temp"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    "A",  # shadowing builtins
    "ARG",  # unused arguments
    "ASYNC",  # async checks
    "B",  # bugbear
    "C4",  # comprehensions
    "DTZ",  # checks for naive datetimes
    "E",  # pycodestyle (errors)
    "ERA",  # eradicate (commented out code)
    "F",  # Pyflakes
    "FBT",  # boolean trap
    "FURB",  # refurb
    "I",   # isort
    "ISC",  # Implicit String Concat
    "LOG",  # logging checks
    "N",  # pep8-naming
    "PIE",  # misc lints
    "PL",  # Pylint
    "PT",  # Pytest
    "PTH",  # favor pahtlib.Path
    "RET",  # returns
    "RUF",  # Ruff-specific rules
    "S",  # bandit
    "SIM",  # simplify
    "T20",  # print statements
    "TC",  # type checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warnings)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "PLR2004",  # magic value used in comparison
    "S101",  # use of assert
]
